# ollama-tkinker-client

./: .gitignore  claude_drop_menu.py  main.py  ollama_list.py  pyproject.toml  requirements.txt
